update docker-compose env and swagger for upload photos
